# google-dictionary-api

./: .gitignore  data-dictionary-google.cabal  getjson.sh  google-dictionary.cabal
Data/Dictionary/: Google.hs
Data/Dictionary/Google/: Internal.hs  Types.hs
Network/API/: GoogleDictionary.hs
Network/API/GoogleDictionary/: Internal.hs  Types.hs
