name:                data-dictionary-google
version:             0.1.0.0
synopsis:            Simple interface to the google.com/dictionary API
homepage:            https://github.com/mitchellwrosen/data-dictionary-google
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Dictionary.Google, Data.Dictionary.Google.Types
  other-modules:       Data.Dictionary.Google.Internal
  other-extensions:    TemplateHaskell, OverloadedStrings
  build-depends:       base       ==4.*,
                       aeson      >=0.6,
                       HTTP       >=4000.0,
                       bytestring >=0.10
  default-language:    Haskell2010
